Revision history for JSON-Schema-Modern

{{$NEXT}}
          - fix integer vs number distinction in draft4 for x.0 values. This
            comes at the expense of properly identifying other numbers as
            integers in draft4 instead of numbers, e.g. 2e1 as a json literal,
            as these all decode to Math::BigFloat objects.

0.610     2025-05-16 20:58:28Z
          - evaluate() and evaluate_json_string() can no longer be called with
            a JSON::Schema::Modern::Document object; now you should only pass
            in the desired URI directly (or the raw schema), as before.
          - fixed some issues when evaluating a schema that had a base URI
            added to it after the document was created, including selecting
            the proper base URI to use in error messages when there are
            multiple choices

0.609     2025-04-20 23:40:09Z
          - validate_schema() (and the json-schema-eval --validate-schema
            option) now detect more errors

0.608     2025-04-11 20:57:16Z
          - documentation now makes a note of the special licence for JSON
            Schema schema files
          - documentation fixes for JSM and JSM::Document regarding handling
            of uris
          - introduction of 'original_uri' for JSON::Schema::Modern::Document,
            which document subclasses may wish to use for logic of their own
            after changing the canonical uri of the document

0.607     2025-04-01 19:35:50Z
          - now performing stricter email address validation for the 'email' and
            'idn-email' formats
          - some improvements to the handling of unimplemented formats (only
            missing core formats are checked for at traverse time; custom
            formats can be added at any time and errors can be avoided with
            'short-circuit')

0.606     2025-03-23 00:16:35Z
          - bump required version for optional module Data::Validate::Domain